# libcrispr

./: .gitignore  Makefile.am  README.md  Xml.cpp  Xml.h  configure.ac  index.html  params.json
doc/: crispr_1-1.dtd  crispr_spec.tex
libcrispr/: Makefile.am  Xml.cpp  Xml.h
